[package]
name = "zhol"
version = "1.0.0"
edition = "2024"

[features]
async = ["smol"]
default = ["async"]

[dependencies]
anyhow = "1.0.99"
bytemuck = { version = "1.23.2", features = ["derive"] }
dynasmrt = "3.2.1"
parking_lot = "0.12.4"
smol = { version = "2.0.2", optional = true }
windows = { version = "0.58.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug"] }
windows-result = "0.3.4"

[lib]
name = "zhol"
path = "src/lib.rs"
# license = "MIT"
# keywords = ["memory", "exploit", "winapi", "process"]
# description = "A Rust library for Windows process manipulation, memory operations, and function hooking."
# homepage = "https://www.github.com/Slackaduts/zhol"
# repository = "https://www.github.com/Slackaduts/zhol"
# publish = true